--- a/demos/index.html
+++ b/demos/index.html
@@ -1,12 +1,13 @@
-<!doctype html>
+<html>
 <head>
-    <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <!-- JS vendors -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="../src/me.share.js"></script>
 
-    <script src="../src/me.share.js"></script>
-
-    <script src="js/app.main.js"></script>
+    <!-- JS demo file -->
+    <script type="text/javascript" src="js/app.main.js"></script>
 </head>
 <body>
-<a href="/" me:share:external>External Link</a>
+    <a href="/" me:share:external>External Link</a>
 </body>
 </html>
